--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,61 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  display: flex;
+  justify-content: center;
 }
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+li {
+  list-style: none;
+}
+a {
+  text-decoration: none;
+}
+.navbar {
+  display: flex;
+  justify-content: space-between;
+}
+.navbar a {
+  font-size: 18px;
+  color: red;
+  background-color: black;
+  padding: 8px 10px;
+  border-radius: 12px;
+}
+.navbar li:hover a {
+  background-color: rgba(0, 0, 0, 0.651);
+}
+.page {
+  width: 200px;
+  margin: 90px;
+  text-align: center;
+  font-size: 25px;
+  color: green;
+  font-weight: 800;
+}
+button {
+  outline: none;
+  background-color: rgb(0, 0, 182);
+  border: none;
+  padding: 10px;
+  border-radius: 10px;
+  width: 200px;
+  margin: 90px;
+  text-align: center;
+  font-size: 25px;
+  color: rgb(238, 234, 22);
+  font-weight: 800;
+  cursor: pointer;
+}
+button:hover {
+  background-color: rgb(0, 0, 90);
+}
+.pending {
+  color: red;
+  font-size: 30px;
+  width: 200px;
+  margin: 90px;
+  text-align: center;
+  font-weight: 800;
 }
